[package]
name = "termview"
version = "0.1.0"
edition = "2021"
description = "A terminal-based image viewer using Unicode half-block rendering"
license = "MIT"

[dependencies]
ratatui = "0.25"
crossterm = "0.27"
image = "0.24"
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
strip = true