[package]
name = "termview"
version = "0.2.0"
edition = "2021"
description = "A terminal-based image viewer using the Kitty graphics protocol"
license = "MIT"

[dependencies]
crossterm = "0.27"
image = "0.24"
clap = { version = "4", features = ["derive"] }
base64 = "0.21"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
strip = true